# openapi/build/bundle.yaml
@@ -674,11 +674,6 @@ components:
     AttendanceResponse:
       type: object
       description: 勤怠レコードの表示用のHTTPレスポンス
-      required:
-        - userId
-        - workDate
-        - clockInAt
-        - clockStatus
       properties:
         id:
           type: string
